scss/components/_nav.scss
// Components

.nav-toggle {
  @include hamburger(map-get($sizes, 'xlarge'));

  // Responsiveness
  @include tablet {
    display: none;
  }
}

.nav-item {
  align-items: center;
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  justify-content: center;
  line-height: 1.5;
  padding: map-get($sizes, 'tiny') map-get($sizes, 'small');

  a {
    flex-grow: 1;
    flex-shrink: 0;
  }

  img {
    max-height: 1.75rem;
  }

  .tag {
    &:first-child:not(:last-child) {
      margin-right: 0.5rem;
    }

    &:last-child:not(:first-child) {
      margin-left: 0.5rem;
    }
  }

  // Responsiveness
  @include mobile {
    justify-content: flex-start;
    // width: 100%;
  }
}

.nav-item a,
a.nav-item {
  color: inherit;

  &:hover {
    color: map-get($colors, 'primary');

  }

  // Modifiers
  &.is-active {
    color: inherit;
  }

  &.is-tab {
    border-bottom: 1px solid transparent;
    border-top: 1px solid transparent;
    padding-bottom: map-get($sizes, 'small');
    padding-left: map-get($sizes, 'small');
    padding-right: map-get($sizes, 'small');
    padding-top: map-get($sizes, 'small');

    &:hover {
      border-bottom-color: map-get($colors, 'primary');
      border-top-color: transparent;
    }

    &.is-active {
      border-bottom: 3px solid map-get($colors, 'primary');
      color: map-get($colors, 'primary');
    }
  }

  // Responsiveness
  @include desktop {
    &.is-brand {
      padding-left: 0;
    }
  }
}

// Containers

.nav-left,
.nav-right {
  align-items: stretch;
  display: flex;
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 0;
  width: 100%;
  overflow-y: scroll;
}

.nav-left {
  justify-content: flex-start;
  white-space: nowrap;
}

.nav-right {
  justify-content: flex-end;
}

.nav-center {
  align-items: stretch;
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
}

.nav-menu {
  // Responsiveness
  @include mobile {
    &.nav-right {
      background-color: map-get($colors, 'white');
      left: 0;
      display: none;
      right: 0;
      top: 100%;
      position: absolute;

      .nav-item {
        border-top: 1px solid rgba(map-get($colors, 'black'), 0.5);
        padding: 0.75rem;
      }

      &.is-active {
        display: block;
      }
    }
  }
}

// Main container

.nav {
  align-items: stretch;
  background-color: map-get($colors, 'white');
  display: flex;
  min-height: map-get($sizes, 'small');
  position: relative;
  text-align: center;
  z-index: 2;

  & > .container {
    align-items: stretch;
    display: flex;
    min-height: map-get($sizes, 'medium');
    width: 100%;

    @include mobile {
      padding-left: 0;
      padding-right: 0;
    }
  }
}

